# Yet-Another-Approach-in-Cpp20-for-problem-67-of-The-Modern-Cpp-Challenge

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
